# budgetbuddy

./: README.md
budgeting-app-frontend/: .env.production  (+3 more)
budgeting_app_backend/: .env  Procfile  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  start.sh  test_model.py
budgeting_app_backend/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
budgeting_app_backend/api/management/commands/: preprocess_data.py
budgeting_app_backend/api/migrations/: 0001_initial.py  0002_transaction_category.py  0003_comment.py  0004_alter_transaction_category_alter_transaction_date_and_more.py  0005_remove_savingsgoal_deadline_and_more.py  0006_alter_transaction_date.py  0007_alter_transaction_category_alter_transaction_date.py
budgeting_app_backend/api/ml/: data_preprocessor.py  model_trainer.py  predictor.py
budgeting_app_backend/api/ml/models/: transaction_classifier_v1.joblib
budgeting_app_backend/api/utils/: X_train.csv  mini_transaction_classifier.pkl  train_model.py  transaction_classifier.pkl  y_train.csv
budgeting_app_backend/budgeting_app_backend/: asgi.py  settings.py  urls.py  wsgi.py
budgeting_app_backend/mlruns/0/: meta.yaml
budgeting_app_backend/mlruns/0/00c614c13a8643e3b61109ff0a571788/: meta.yaml
budgeting_app_backend/mlruns/0/17989f8864984bda994c14c99d0c65f9/: meta.yaml
budgeting_app_backend/mlruns/0/2c763226f5f0499dbe8d1ff6c871ee90/: meta.yaml
budgeting_app_backend/mlruns/0/31039a9ce6d54ec9b75bb7c027f51b9d/: meta.yaml
budgeting_app_backend/mlruns/0/5a83f32a725947df920ce270a5cf880b/: meta.yaml
(+47 files in other folders)
