[tool.poetry]
name = "budgeting_app_backend"
version = "1.0.0"
description = "BudgetBuddy Django Backend"
authors = ["Your Name <your.email@example.com>"]  # REQUIRED FIELD
license = "MIT"  # Optional but recommended

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.6"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.1"
psycopg2-binary = "2.9.9"
dj-database-url = "2.1.0"
python-dotenv = "1.0.0"
gunicorn = "21.2.0"
whitenoise = "6.6.0"
Pillow = "10.1.0"
djangorestframework-simplejwt = "5.3.1"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"